--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "dev": "vite",
+    "dev": "vite preview",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --ignore-path .prettierignore ."
@@ -33,6 +33,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11"
   }
 }
