--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --ignore-path .prettierignore ."
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
@@ -24,7 +24,8 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.28.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
