--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --ignore-path .prettierignore ."
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
