--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.28.1",
-    "tailwindcss": "^3.4.17",
-    "vite": "^4.0.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
