--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "vite": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "hamburger-react": "^2.5.2",
     "postcss": "^8.4.49",
