--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.28.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.17",
     "vite": "^4.0.0"
   },
